@@ -1,1 +1,1 @@
-define(["snmd-core/js/Core","snmd-core/js/HTML","snmd-core/js/Notify","snmd-core/js/Sound","snmd-core/js/SVG","snmd-core/js/Polyfills","require","jquery","sprintf","js-cookie","js-logger","qtip2","css!qtip2"],function(t,e,s,i,n,a,o,r,c,d,l){"use strict";var h=null,u=function(){if(null!==h)throw new Error("Cannot instantiate more than one instance, use getInstance()!");this.idCounter=0,this.TO_SCREEN=6e5,this.TO_SWITCH=3e4,this.screenState=0,this.viewStates={},this.viewFinalStates={},this.navbarState=0,this.currentStep=0,this.currentRotations=0,this.resizeTO=void 0,this.viewConf={views:NaN,dps:NaN,r:NaN,is_3d:!1},this.views={},this.views2id={},this.enabledScreenTO=!0,this.enableRotation=!1,this.enableFollow=!0,this.ctrlButtons={"3d":{shortcut:"d".charCodeAt(),title:"Toggle 3D view.",state:0,states:[{facls:"low-vision",descr:"Disable 3D view (increases performance).",cb:function(){this.snmdInit3D(!1)}},{facls:"eye",descr:"Enable 3D view (decreased performance).",cb:function(){this.snmdInit3D(!0)}}]},solarized:{shortcut:"s".charCodeAt(),title:"Switch solarized theme.",state:0,states:[{facls:"moon-o",descr:"Switch theme to solarized dark.",cb:function(){this.snmdSolarizedDark()}},{facls:"sun-o",descr:"Switch theme to solarized light.",cb:function(){this.snmdSolarizedLight()}}]},volume:{shortcut:"v".charCodeAt(),title:"Toggle alert sounds.",state:0,states:[{facls:"volume-up",descr:"Enable notification sounds.",cb:function(){i.snmdUnmute()}},{facls:"volume-off",descr:"Disable notification sounds.",cb:function(){i.snmdMute()}}]},notify:{shortcut:"n".charCodeAt(),title:"Toggle browser notifications.",state:0,states:[{facls:"commenting",descr:"Enable desktop notifications.",cb:function(){s.enable()}},{facls:"comment-o",descr:"Disable desktop notifications.",cb:function(){s.disable()}}]},rotate:{shortcut:"r".charCodeAt(),title:"Toggle interval or continuous view rotation.",state:0,states:[{facls:"repeat",descr:"Rotate view after activity timeout.",cb:function(){this.enabledScreenTO=!0,this.enableRotation=!1}},{facls:"circle-o-notch",descr:"Keep current view.",cb:function(){this.enabledScreenTO=!1,this.enableRotation=!1}},{facls:"refresh",descr:"Continuous view rotation.",cb:function(){this.enabledScreenTO=!1,this.enableRotation=!0,this.snmdNavRel(1)}}]},follow:{shortcut:"f".charCodeAt(),title:"Toggle current view follows state changes.",state:0,states:[{facls:"crosshairs",descr:"Switch to views if there state changes at least warning.",cb:function(){this.enableFollow=!0}},{facls:"stop-circle-o",descr:"Do not switch to views due to state changes.",cb:function(){this.enableFollow=!1}}]}},a.snmdUsePolyfill("cssVars")&&delete this.ctrlButtons.solarized};return u.getInstance=function(){return null===h&&(h=new u),h},u.prototype.srScreenTimeOut=function(){var t=o("snmd-core/js/GUI");t.enabledScreenTO?(0===t.screenState&&(t.screenState+=1,r(document.body).addClass("on-screensaver")),r("#snmd-nav").each(function(){var e=r(this).children(".srViewsNav").find("a");t.currentStep+=1,t.currentRotations+=1,e[t.currentStep%e.length].click()}),t.screenTimeOut=window.setTimeout(t.srScreenTimeOut,t.TO_SWITCH)):t.screenTimeOut=window.setTimeout(t.srScreenTimeOut,t.TO_SWITCH)},u.prototype.snmdStateUpdate=function(t,e,s,n){if(s!==n&&(r("#switch-"+t).addClass("snmd-scl-"+n).removeClass("snmd-scl-"+s),r("#"+t).addClass("snmd-scl-"+n).removeClass("snmd-scl-"+s),n>0&&this.enableFollow&&(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN)),r("#switch-"+t).click()),(-1===r.inArray(s,[-1,3])||n>0)&&i.snmdPlay("default","state-"+n),this.navbarState!==n)){var a=this.navbarState,o=n,c=this;Object.keys(this.viewFinalStates).forEach(function(t){c.viewFinalStates[t]>o&&(o=c.viewFinalStates[t])}),o!==a&&(r("#snmd-nav").addClass("snmd-scl-"+o).removeClass("snmd-scl-"+a),this.navbarState=o)}},u.prototype.srStateChanged=function(t,e,i){this.viewStates[t][e]=i,s.notify(e+" is now "+i);var n=this.viewFinalStates[t];if(this.viewFinalStates[t]<i)this.viewFinalStates[t]=i,this.snmdStateUpdate(t,e,n,this.viewFinalStates[t]);else if(this.viewFinalStates[t]>i){var a=i,o=this;Object.keys(this.viewStates[t]).forEach(function(e){o.viewStates[t][e]>a&&(a=o.viewStates[t][e])}),this.viewFinalStates[t]=a,this.snmdStateUpdate(t,e,n,this.viewFinalStates[t])}},u.prototype.snmdInit3D=function(t){void 0===t&&(t=r(document.body).hasClass("snmd-in-3d")),t?(this.viewConf.is_3d=!0,r(document.body).addClass("snmd-in-3d").removeClass("snmd-in-2d"),this.resizeHandler()):(this.viewConf.is_3d=!1,r(document.body).addClass("snmd-in-2d").removeClass("snmd-in-3d"),Object.keys(this.views).forEach(function(t){r("#"+this.views2id[t]).css("transform","")},this),r("#snmd-views").css("transform",""))},u.prototype.snmdSolarizedDark=function(){r(document.body).addClass("solarized-dark").removeClass("solarized-light")},u.prototype.snmdSolarizedLight=function(){r(document.body).addClass("solarized-light").removeClass("solarized-dark")},u.prototype.snmdAlignView=function(){this.viewConf.is_3d&&r("#snmd-views").css("transform","translateZ(-"+this.viewConf.r+"px) rotateY("+this.currentRotations*-this.viewConf.dps+"deg)")},u.prototype.snmdNavRel=function(t){var e=r("#snmd-nav").children(".srViewsNav").find("a");for(this.currentRotations=(this.currentRotations+t)%2147483648,this.currentStep+=t;this.currentStep<0;)this.currentStep+=e.length;this.currentStep=this.currentStep%e.length,this.changeView(this.currentStep)},u.prototype.resizeHandler=function(){if(this.viewConf.is_3d){this.viewConf.vw=r("#snmd-vouter").width(),this.viewConf.r=this.numViews>1?this.viewConf.vw/2/Math.tan(Math.PI/this.numViews):0;var t=0;Object.keys(this.views).forEach(function(e){r("#"+this.views2id[e]).css("transform","rotateY("+this.viewConf.dps*t+"deg) translateZ("+this.viewConf.r+"px)"),t+=1},this),this.snmdAlignView()}},u.prototype.resizeHandlerThrottle=function(){this.viewConf.is_3d&&(this.resizeTO&&clearTimeout(this.resizeTO),this.resizeTO=setTimeout(this.resizeHandler.bind(this),200))},u.prototype.setCtrlState=function(t,e){var s=this.ctrlButtons[t];s.icon.removeClass("fa-"+s.states[s.state].facls),s.state=parseInt(e,10)%s.states.length,s.icon.addClass("fa-"+s.states[s.state].facls),s.states[s.state].cb.call(this)},u.prototype.setRotateTimeout=function(){void 0!==this.transTO&&(window.clearTimeout(this.transTO),this.transTO=void 0),this.enableRotation&&(this.transTO=window.setTimeout(function(t){t.snmdNavRel(1)},5e3,this))},u.prototype.changeView=function(t){l.debug("[GUI] Viewing #"+this.views2id[t]);var e=r("#snmd-views"),s=r("#snmd-nav").children(".srViewsNav"),i=e.children().removeClass("current").filter("#"+this.views2id[t]);i.removeClass("next").removeClass("prev").addClass("current"),i.prevAll().removeClass("next").addClass("prev"),i.nextAll().removeClass("prev").addClass("next"),s.find("a").removeClass("selected").filter("#switch-"+this.views2id[t]).addClass("selected"),this.viewConf.is_3d||this.setRotateTimeout(),this.snmdAlignView(),window.location.hash="#"+(this.currentStep+1)},u.prototype.srInit=function(t){this.views=t,this.numViews=t.length,this.viewConf.dps=360/this.numViews,r(window).on("resize",this.resizeHandlerThrottle.bind(this)),this.resizeHandler();var i,a=this,o=r("#snmd-nav").children(".srViewsNav");for(i=0;i<t.length;i++){this.views2id[i]="srView-"+(i+1),this.viewStates[this.views2id[i]]={},this.viewFinalStates[this.views2id[i]]=-1;var l=r("<span></span>").text('Switch to view "'+this.views[i].title+'".'),h=r('<a id="switch-'+this.views2id[i]+'" href="#'+(i+1)+'" class="snmd-nav-switch"></a>').text(this.views[i].title).click(i,function(t){a.currentRotations+=t.data-a.currentStep,a.currentStep=t.data,a.changeView(t.data)});r("<li></li>").qtip({content:{text:parseInt(i,10)>9?l:r("<div></div>").append(r('<div class="snmd-nav-key"></div>').text((parseInt(i,10)+1)%10)).append(l)}}).append(h).appendTo(o)}var u=r("#snmd-views");for(i=0;i<t.length;i++){switch(u.append('<div class="svgview" id="'+a.views2id[i]+'"></div>'),t[i].render){case"html":e.srLoadHTML(a.views2id[i],a.views[i].url,a.views[i].reload);break;default:n.srLoadSVG(a.views2id[i],a.views[i].url)}1}if(a.snmdInit3D(),u.on("transitionend",this.setRotateTimeout.bind(a)),""!==window.location.hash){var v=parseInt(window.location.hash.replace(/^#/,""),10)-1,f=o.find("a:eq("+v%t.length+")");0===f.length?o.find("a").filter(":first").click():f.click()}else o.find("a").filter(":first").click();var w=r("ul.snmd-ctrl").empty();Object.keys(a.ctrlButtons).forEach(function(t){var e=a.ctrlButtons[t],s=r("<i></i>").addClass("fa fa-"+e.states[e.state].facls),i=r("<span></span>").append(r('<div class="snmd-nav-key"></div>').text(String.fromCharCode(e.shortcut))).append(r("<span></span>").text(e.title)),n=r("<ul class='snmd-nav-icolist'></ul>");e.states.forEach(function(t){var e=r("<i></i>").addClass("fa fa-"+t.facls),s=r("<span></span>").text(t.descr);n.append(r("<li></li>").append(e).append(s))});var o=r("<a></a>").attr({href:"#"+t}).append(s).click(function(){return s.removeClass("fa-"+e.states[e.state].facls),e.state=(e.state+1)%e.states.length,s.addClass("fa-"+e.states[e.state].facls),e.states[e.state].cb.call(a),d.set("snmd-ctrl-"+t,e.state),!1}).qtip({content:{title:i,text:n}});a.ctrlButtons[t].icon=s,a.ctrlButtons[t].button=o;var c=d.get("snmd-ctrl-"+t);void 0!==c&&a.setCtrlState(t,c),w.append(r("<li></li>").append(o))}),s.checkPerm(null,function(){a.setCtrlState("notify",1),a.ctrlButtons.notify.states.shift(),a.ctrlButtons.notify.state=0});var m=r("div#snmd_clock");m&&window.setInterval(function(){var t=new Date,e=-t.getTimezoneOffset(),s=e>=0?"+":"-";e=Math.abs(e);var i=c.sprintf("%d-%02d-%02dT%02d:%02d:%02d%s%02d%02d",t.getFullYear(),t.getMonth()+1,t.getDate(),t.getHours(),t.getMinutes(),t.getSeconds(),s,e/60,e%60);m.text(i)},1e3),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN),r(document).mousemove(function(){this.enableRotation||(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN),r(document.body).removeClass("on-screensaver")))}.bind(this)),r(document).keydown(function(t){if(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN)),37===t.keyCode||39===t.keyCode)this.snmdNavRel(37===t.keyCode?-1:1);else if(38===t.keyCode||40===t.keyCode){var e=r("#snmd-nav").children(".srViewsNav").find("a");e[40===t.keyCode?0:e.length-1].click()}}.bind(this)),r(document).keypress(function(t){if(t.which>47&&t.which<58){var e=48===t.which?"a":String.fromCharCode(t.which);return r("#switch-srView-"+e).click(),void t.preventDefault()}Object.keys(a.ctrlButtons).forEach(function(e){if(a.ctrlButtons[e].shortcut===t.which)return a.ctrlButtons[e].button.click(),void t.preventDefault()})}.bind(this)),r(document).on("swipeleft",function(){this.snmdNavRel(1)}.bind(this)),r(document).on("swiperight",function(){this.snmdNavRel(-1)}.bind(this))},u.getInstance()});
+define(["snmd-core/js/Core","snmd-core/js/HTML","snmd-core/js/Notify","snmd-core/js/Sound","snmd-core/js/SVG","snmd-core/js/Polyfills","require","jquery","sprintf","js-cookie","js-logger","qtip2","css!qtip2"],function(t,e,s,i,n,a,o,r,c,d,l){"use strict";var h=null,u=function(){if(null!==h)throw new Error("Cannot instantiate more than one instance, use getInstance()!");this.idCounter=0,this.TO_SCREEN=6e5,this.TO_SWITCH=3e4,this.screenState=0,this.viewStates={},this.viewFinalStates={},this.navbarState=0,this.currentStep=0,this.currentRotations=0,this.resizeTO=void 0,this.viewConf={views:NaN,dps:NaN,r:NaN,is_3d:!1},this.views={},this.views2id={},this.enabledScreenTO=!0,this.enableRotation=!1,this.enableFollow=!0,this.ctrlButtons={"3d":{shortcut:"d".charCodeAt(),title:"Toggle 3D view.",state:0,states:[{facls:"low-vision",descr:"Disable 3D view (increases performance).",cb:function(){this.snmdInit3D(!1)}},{facls:"eye",descr:"Enable 3D view (decreased performance).",cb:function(){this.snmdInit3D(!0)}}]},solarized:{shortcut:"s".charCodeAt(),title:"Switch solarized theme.",state:0,states:[{facls:"moon-o",descr:"Switch theme to solarized dark.",cb:function(){this.snmdSolarizedDark()}},{facls:"sun-o",descr:"Switch theme to solarized light.",cb:function(){this.snmdSolarizedLight()}}]},volume:{shortcut:"v".charCodeAt(),title:"Toggle alert sounds.",state:0,states:[{facls:"volume-up",descr:"Enable notification sounds.",cb:function(){i.snmdUnmute()}},{facls:"volume-off",descr:"Disable notification sounds.",cb:function(){i.snmdMute()}}]},notify:{shortcut:"n".charCodeAt(),title:"Toggle browser notifications.",state:0,states:[{facls:"commenting",descr:"Enable desktop notifications.",cb:function(){s.enable()}},{facls:"comment-o",descr:"Disable desktop notifications.",cb:function(){s.disable()}}]},rotate:{shortcut:"r".charCodeAt(),title:"Toggle interval or continuous view rotation.",state:0,states:[{facls:"repeat",descr:"Rotate view after activity timeout.",cb:function(){this.enabledScreenTO=!0,this.enableRotation=!1}},{facls:"circle-o-notch",descr:"Keep current view.",cb:function(){this.enabledScreenTO=!1,this.enableRotation=!1}},{facls:"refresh",descr:"Continuous view rotation.",cb:function(){this.enabledScreenTO=!1,this.enableRotation=!0,this.snmdNavRel(1)}}]},follow:{shortcut:"f".charCodeAt(),title:"Toggle current view follows state changes.",state:0,states:[{facls:"crosshairs",descr:"Switch to views if there state changes at least warning.",cb:function(){this.enableFollow=!0}},{facls:"stop-circle-o",descr:"Do not switch to views due to state changes.",cb:function(){this.enableFollow=!1}}]}},a.snmdUsePolyfill("cssVars")&&delete this.ctrlButtons.solarized};return u.getInstance=function(){return null===h&&(h=new u),h},u.prototype.srScreenTimeOut=function(){var t=o("snmd-core/js/GUI");t.enabledScreenTO?(0===t.screenState&&(t.screenState+=1,r(document.body).addClass("on-screensaver")),t.snmdNavRel(1),t.screenTimeOut=window.setTimeout(t.srScreenTimeOut,t.TO_SWITCH)):t.screenTimeOut=window.setTimeout(t.srScreenTimeOut,t.TO_SWITCH)},u.prototype.snmdStateUpdate=function(t,e,s,n){if(s!==n&&(r("#switch-"+t).addClass("snmd-scl-"+n).removeClass("snmd-scl-"+s),r("#"+t).addClass("snmd-scl-"+n).removeClass("snmd-scl-"+s),n>0&&this.enableFollow&&(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN)),r("#switch-"+t).click()),(-1===r.inArray(s,[-1,3])||n>0)&&i.snmdPlay("default","state-"+n),this.navbarState!==n)){var a=this.navbarState,o=n,c=this;Object.keys(this.viewFinalStates).forEach(function(t){c.viewFinalStates[t]>o&&(o=c.viewFinalStates[t])}),o!==a&&(r("#snmd-nav").addClass("snmd-scl-"+o).removeClass("snmd-scl-"+a),this.navbarState=o)}},u.prototype.srStateChanged=function(t,e,i){this.viewStates[t][e]=i,s.notify(e+" is now "+i);var n=this.viewFinalStates[t];if(this.viewFinalStates[t]<i)this.viewFinalStates[t]=i,this.snmdStateUpdate(t,e,n,this.viewFinalStates[t]);else if(this.viewFinalStates[t]>i){var a=i,o=this;Object.keys(this.viewStates[t]).forEach(function(e){o.viewStates[t][e]>a&&(a=o.viewStates[t][e])}),this.viewFinalStates[t]=a,this.snmdStateUpdate(t,e,n,this.viewFinalStates[t])}},u.prototype.snmdInit3D=function(t){void 0===t&&(t=r(document.body).hasClass("snmd-in-3d")),t?(this.viewConf.is_3d=!0,r(document.body).addClass("snmd-in-3d").removeClass("snmd-in-2d"),this.resizeHandler()):(this.viewConf.is_3d=!1,r(document.body).addClass("snmd-in-2d").removeClass("snmd-in-3d"),Object.keys(this.views).forEach(function(t){r("#"+this.views2id[t]).css("transform","")},this),r("#snmd-views").css("transform",""))},u.prototype.snmdSolarizedDark=function(){r(document.body).addClass("solarized-dark").removeClass("solarized-light")},u.prototype.snmdSolarizedLight=function(){r(document.body).addClass("solarized-light").removeClass("solarized-dark")},u.prototype.snmdAlignView=function(){this.viewConf.is_3d&&r("#snmd-views").css("transform","translateZ(-"+this.viewConf.r+"px) rotateY("+this.currentRotations*-this.viewConf.dps+"deg)")},u.prototype.snmdNavRel=function(t){var e=r("#snmd-nav").children(".srViewsNav").find("a");for(this.currentRotations=(this.currentRotations+t)%2147483648,this.currentStep+=t;this.currentStep<0;)this.currentStep+=e.length;this.currentStep=this.currentStep%e.length,this.changeView(this.currentStep)},u.prototype.resizeHandler=function(){if(this.viewConf.is_3d){this.viewConf.vw=r("#snmd-vouter").width(),this.viewConf.r=this.numViews>1?this.viewConf.vw/2/Math.tan(Math.PI/this.numViews):0;var t=0;Object.keys(this.views).forEach(function(e){r("#"+this.views2id[e]).css("transform","rotateY("+this.viewConf.dps*t+"deg) translateZ("+this.viewConf.r+"px)"),t+=1},this),this.snmdAlignView()}},u.prototype.resizeHandlerThrottle=function(){this.viewConf.is_3d&&(this.resizeTO&&clearTimeout(this.resizeTO),this.resizeTO=setTimeout(this.resizeHandler.bind(this),200))},u.prototype.setCtrlState=function(t,e){var s=this.ctrlButtons[t];s.icon.removeClass("fa-"+s.states[s.state].facls),s.state=parseInt(e,10)%s.states.length,s.icon.addClass("fa-"+s.states[s.state].facls),s.states[s.state].cb.call(this)},u.prototype.setRotateTimeout=function(){void 0!==this.transTO&&(window.clearTimeout(this.transTO),this.transTO=void 0),this.enableRotation&&(this.transTO=window.setTimeout(function(t){t.snmdNavRel(1)},5e3,this))},u.prototype.changeView=function(t){l.debug("[GUI] Viewing #"+this.views2id[t]);var e=r("#snmd-views"),s=r("#snmd-nav").children(".srViewsNav"),i=e.children().removeClass("current").filter("#"+this.views2id[t]);i.removeClass("next").removeClass("prev").addClass("current"),i.prevAll().removeClass("next").addClass("prev"),i.nextAll().removeClass("prev").addClass("next"),s.find("a").removeClass("selected").filter("#switch-"+this.views2id[t]).addClass("selected"),this.viewConf.is_3d||this.setRotateTimeout(),this.snmdAlignView(),window.location.hash="#"+(this.currentStep+1)},u.prototype.srInit=function(t){this.views=t,this.numViews=t.length,this.viewConf.dps=360/this.numViews,r(window).on("resize",this.resizeHandlerThrottle.bind(this)),this.resizeHandler();var i,a=this,o=r("#snmd-nav").children(".srViewsNav");for(i=0;i<t.length;i++){this.views2id[i]="srView-"+(i+1),this.viewStates[this.views2id[i]]={},this.viewFinalStates[this.views2id[i]]=-1;var l=r("<span></span>").text('Switch to view "'+this.views[i].title+'".'),h=r('<a id="switch-'+this.views2id[i]+'" href="#'+(i+1)+'" class="snmd-nav-switch"></a>').text(this.views[i].title).click(i,function(t){a.currentRotations+=t.data-a.currentStep,a.currentStep=t.data,a.changeView(t.data)});r("<li></li>").qtip({content:{text:parseInt(i,10)>9?l:r("<div></div>").append(r('<div class="snmd-nav-key"></div>').text((parseInt(i,10)+1)%10)).append(l)}}).append(h).appendTo(o)}var u=r("#snmd-views");for(i=0;i<t.length;i++){switch(u.append('<div class="svgview" id="'+a.views2id[i]+'"></div>'),t[i].render){case"html":e.srLoadHTML(a.views2id[i],a.views[i].url,a.views[i].reload);break;default:n.srLoadSVG(a.views2id[i],a.views[i].url)}1}if(a.snmdInit3D(),u.on("transitionend",this.setRotateTimeout.bind(a)),""!==window.location.hash){var v=parseInt(window.location.hash.replace(/^#/,""),10)-1,f=o.find("a:eq("+v%t.length+")");0===f.length?o.find("a").filter(":first").click():f.click()}else o.find("a").filter(":first").click();var w=r("ul.snmd-ctrl").empty();Object.keys(a.ctrlButtons).forEach(function(t){var e=a.ctrlButtons[t],s=r("<i></i>").addClass("fa fa-"+e.states[e.state].facls),i=r("<span></span>").append(r('<div class="snmd-nav-key"></div>').text(String.fromCharCode(e.shortcut))).append(r("<span></span>").text(e.title)),n=r("<ul class='snmd-nav-icolist'></ul>");e.states.forEach(function(t){var e=r("<i></i>").addClass("fa fa-"+t.facls),s=r("<span></span>").text(t.descr);n.append(r("<li></li>").append(e).append(s))});var o=r("<a></a>").attr({href:"#"+t}).append(s).click(function(){return s.removeClass("fa-"+e.states[e.state].facls),e.state=(e.state+1)%e.states.length,s.addClass("fa-"+e.states[e.state].facls),e.states[e.state].cb.call(a),d.set("snmd-ctrl-"+t,e.state),!1}).qtip({content:{title:i,text:n}});a.ctrlButtons[t].icon=s,a.ctrlButtons[t].button=o;var c=d.get("snmd-ctrl-"+t);void 0!==c&&a.setCtrlState(t,c),w.append(r("<li></li>").append(o))}),s.checkPerm(null,function(){a.setCtrlState("notify",1),a.ctrlButtons.notify.states.shift(),a.ctrlButtons.notify.state=0});var m=r("div#snmd_clock");m&&window.setInterval(function(){var t=new Date,e=-t.getTimezoneOffset(),s=e>=0?"+":"-";e=Math.abs(e);var i=c.sprintf("%d-%02d-%02dT%02d:%02d:%02d%s%02d%02d",t.getFullYear(),t.getMonth()+1,t.getDate(),t.getHours(),t.getMinutes(),t.getSeconds(),s,e/60,e%60);m.text(i)},1e3),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN),r(document).mousemove(function(){this.enableRotation||(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN),r(document.body).removeClass("on-screensaver")))}.bind(this)),r(document).keydown(function(t){if(this.screenState=0,void 0!==this.screenTimeOut&&(window.clearTimeout(this.screenTimeOut),this.screenTimeOut=window.setTimeout(this.srScreenTimeOut,this.TO_SCREEN)),37===t.keyCode||39===t.keyCode)this.snmdNavRel(37===t.keyCode?-1:1);else if(38===t.keyCode||40===t.keyCode){var e=r("#snmd-nav").children(".srViewsNav").find("a");e[40===t.keyCode?0:e.length-1].click()}}.bind(this)),r(document).keypress(function(t){if(t.which>47&&t.which<58){var e=48===t.which?"a":String.fromCharCode(t.which);return r("#switch-srView-"+e).click(),void t.preventDefault()}Object.keys(a.ctrlButtons).forEach(function(e){if(a.ctrlButtons[e].shortcut===t.which)return a.ctrlButtons[e].button.click(),void t.preventDefault()})}.bind(this)),r(document).on("swipeleft",function(){this.snmdNavRel(1)}.bind(this)),r(document).on("swiperight",function(){this.snmdNavRel(-1)}.bind(this))},u.getInstance()});
